--- a/documentation/arc42/12_glossary.adoc
+++ b/documentation/arc42/12_glossary.adoc
@@ -1,15 +1,59 @@
 [[section-glossary]]
 == Glossary
 
-
-
-[cols="e,2e" options="header"]
+[cols="1,3", options="header"]
 |===
-|Term |Definition
+| Term                  | Definition
 
-|<Term-1>
-|<definition-1>
+| API Gateway           
+| A server that acts as an entry point for clients, managing requests to multiple backend services in a microservices architecture.
 
-|<Term-2>
-|<definition-2>
-|===
+| Active-Active Strategy 
+| A high availability approach where multiple regions or instances are active simultaneously, ensuring seamless failover and load balancing.
+
+| Microservices         
+| An architectural style that structures an application as a collection of loosely coupled services, each responsible for a specific business capability.
+
+| API Versioning        
+| The practice of managing different versions of an API to maintain compatibility and support for clients using older versions.
+
+| Eventual Consistency  
+| A consistency model in distributed systems where updates are not immediately reflected across all nodes but will eventually converge to the same state.
+
+| High Availability     
+| A system design approach that ensures minimal downtime and continuous operation, often achieved through redundancy and failover mechanisms.
+
+| CI/CD Pipeline        
+| A set of automated processes for continuous integration and continuous deployment, enabling rapid and reliable software delivery.
+
+| Cache                 
+| A temporary data storage layer that stores frequently accessed data to reduce retrieval times and improve performance.
+
+| Chaos Engineering     
+| The practice of testing a system's resilience by intentionally introducing failures to observe how it responds and identify areas for improvement.
+
+| Centralized Logging   
+| A logging approach where logs from various services are collected and stored in a central location for monitoring and troubleshooting.
+
+| CRUD Operations       
+| Basic data operations: Create, Read, Update, and Delete, commonly used in database management.
+
+| Fault Tolerance       
+| The ability of a system to continue operating properly in the event of a failure of some of its components.
+
+| Load Balancer         
+| A component that distributes incoming network traffic across multiple servers to ensure availability and reliability.
+
+| Namespace             
+| A logical grouping used to organize resources, often used in Kubernetes to isolate applications or environments.
+
+| Scalability           
+| The capability of a system to handle increased load by adding resources, such as compute power or storage.
+
+| Service Bus           
+| A messaging infrastructure that allows applications to communicate with each other in a decoupled way, commonly used in distributed systems.
+
+| SLA (Service Level Agreement) 
+| A commitment between a service provider and a client that defines the expected level of service performance, availability, and support.
+
+|=== 
